--- a/inventories/group_vars/mawus_prod.yml
+++ b/inventories/group_vars/mawus_prod.yml
@@ -15,9 +15,9 @@ asset_dir_root: /srv/www/website_assets
 # mawus
 mawus__username: svc_www_maw
 mawus__password: "{{ vault_os_svc_www_maw }}"
+mawus__env: prod
 
 mawus_config_prod:
-  env: prod
   aspnet_env: production
 
   bash_profile: "{{ controller_home_dir }}/.bash_profile"
