--- a/roles/mikeandwan_us/tasks/maw_postgres_set_role_password.yml
+++ b/roles/mikeandwan_us/tasks/maw_postgres_set_role_password.yml
@@ -1,6 +1,6 @@
 - name: set role password
   containers.podman.podman_container:
-    name: "{{ mawus_config.env }}-maw-pginit-role-password"
+    name: "{{ mawus__env }}-maw-pginit-role-password"
     pod: "{{ mawus_config.podman_podname }}"
     image: "{{ mawus_config.podman_image_postgres }}"
     env_file: "{{ mawus_config.podman_env_dir }}/maw-postgres.env"
@@ -20,7 +20,7 @@
 - name: wait for set role container to stop
   ansible.builtin.include_tasks: wait_for_container_to_stop.yml
   vars:
-    container_name: "{{ mawus_config.env }}-maw-pginit-role-password"
+    container_name: "{{ mawus__env }}-maw-pginit-role-password"
     exit_code_varname: role_pwd_result
 
 - name: fail if password not set
