--- a/roles/mikeandwan_us/tasks/maw_maintenance.yml
+++ b/roles/mikeandwan_us/tasks/maw_maintenance.yml
@@ -4,22 +4,22 @@
     name: certbot_renew
   vars:
     cb__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    cb__service_name: "{{ mawus_config.env }}-certbot-renew"
+    cb__service_name: "{{ mawus__env }}-certbot-renew"
     cb__start_job: false
-    cb__enable_job: "{{ mawus_config.env == 'prod' }}"
+    cb__enable_job: "{{ mawus__env == 'prod' }}"
     cb__calendar: '0/12:00:00'
     cb__pod: "{{ mawus_config.podman_podname }}"
     cb__container_image: "{{ mawus_config.podman_image_certbot }}"
     cb__validation_volume: "{{ certbot_validation_volume.volume.Name }}"
     cb__certs_volume: "{{ certbot_certs_volume.volume.Name }}"
-  when: mawus_config.env == 'prod'
+  when: mawus__env == 'prod'
 
 - name: Configure Reverse Geocoder
   ansible.builtin.include_role:
     name: reverse_geocoder
   vars:
     rev_geo__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    rev_geo__service: "{{ mawus_config.env }}-reverse-geocoder"
+    rev_geo__service: "{{ mawus__env }}-reverse-geocoder"
     rev_geo__pod: "{{ mawus_config.podman_podname }}"
     rev_geo__volume: "{{ reverse_geocode_volume.volume.Name }}"
     rev_geo__envfile: "{{ mawus_config.podman_env_dir }}/maw-reverse-geocode.env"
@@ -31,7 +31,7 @@
     name: solr_indexer
   vars:
     solr_idx__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    solr_idx__service: "{{ mawus_config.env }}-solr-indexer"
+    solr_idx__service: "{{ mawus__env }}-solr-indexer"
     solr_idx__pod: "{{ mawus_config.podman_podname }}"
     solr_idx__image: "{{ mawus_config.podman_image_solr_indexer }}"
     solr_idx__sql_username: "{{ mawus_config.sql_solr_username }}"
@@ -43,7 +43,7 @@
     name: postgres_backup_roles
   vars:
     pg_bu_roles__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    pg_bu_roles__service: "{{ mawus_config.env }}-postgres-backup-roles"
+    pg_bu_roles__service: "{{ mawus__env }}-postgres-backup-roles"
     pg_bu_roles__pod: "{{ mawus_config.podman_podname }}"
     pg_bu_roles__volume: "{{ postgres_backup_volume.volume.Name }}"
     pg_bu_roles__envfile: "{{ mawus_config.podman_env_dir }}/maw-postgres.env"
@@ -55,7 +55,7 @@
     name: postgres_backup_database
   vars:
     pg_bu_db__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    pg_bu_db__service: "{{ mawus_config.env }}-postgres-backup-mawus"
+    pg_bu_db__service: "{{ mawus__env }}-postgres-backup-mawus"
     pg_bu_db__pod: "{{ mawus_config.podman_podname }}"
     pg_bu_db__volume: "{{ postgres_backup_volume.volume.Name }}"
     pg_bu_db__envfile: "{{ mawus_config.podman_env_dir }}/maw-postgres.env"
@@ -68,7 +68,7 @@
     name: postgres_backup_database
   vars:
     pg_bu_db__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    pg_bu_db__service: "{{ mawus_config.env }}-postgres-backup-idsrv"
+    pg_bu_db__service: "{{ mawus__env }}-postgres-backup-idsrv"
     pg_bu_db__pod: "{{ mawus_config.podman_podname }}"
     pg_bu_db__volume: "{{ postgres_backup_volume.volume.Name }}"
     pg_bu_db__envfile: "{{ mawus_config.podman_env_dir }}/maw-postgres.env"
@@ -81,7 +81,7 @@
     name: postgres_optimize
   vars:
     pg_optimize__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    pg_optimize__service: "{{ mawus_config.env }}-postgres-optimize-mawus"
+    pg_optimize__service: "{{ mawus__env }}-postgres-optimize-mawus"
     pg_optimize__pod: "{{ mawus_config.podman_podname }}"
     pg_optimize__envfile: "{{ mawus_config.podman_env_dir }}/maw-postgres.env"
     pg_optimize__postgres_image: "{{ mawus_config.podman_image_postgres }}"
@@ -93,7 +93,7 @@
     name: postgres_optimize
   vars:
     pg_optimize__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    pg_optimize__service: "{{ mawus_config.env }}-postgres-optimize-idsrv"
+    pg_optimize__service: "{{ mawus__env }}-postgres-optimize-idsrv"
     pg_optimize__pod: "{{ mawus_config.podman_podname }}"
     pg_optimize__envfile: "{{ mawus_config.podman_env_dir }}/maw-postgres.env"
     pg_optimize__postgres_image: "{{ mawus_config.podman_image_postgres }}"
@@ -105,7 +105,7 @@
     name: postgres_backup_cleanup
   vars:
     pg_clean__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    pg_clean__service: "{{ mawus_config.env }}-postgres-cleanup"
+    pg_clean__service: "{{ mawus__env }}-postgres-cleanup"
     pg_clean__postgres_image: "{{ mawus_config.podman_image_postgres }}"
     pg_clean__pod: "{{ mawus_config.podman_podname }}"
     pg_clean__volume: "{{ postgres_backup_volume.volume.Name }}"
@@ -116,7 +116,7 @@
     name: postgres_gdrive_archive
   vars:
     pg_archive__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    pg_archive__service: "{{ mawus_config.env }}-postgres-archive-daily"
+    pg_archive__service: "{{ mawus__env }}-postgres-archive-daily"
     pg_archive__pod: "{{ mawus_config.podman_podname }}"
     pg_archive__files_to_archive_volume: "{{ postgres_backup_volume.volume.Name }}"
     pg_archive__credentials_volume: "{{ gdrive_creds_volume.volume.Name }}"
@@ -130,7 +130,7 @@
     name: postgres_gdrive_archive
   vars:
     pg_archive__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-    pg_archive__service: "{{ mawus_config.env }}-postgres-archive-monthly"
+    pg_archive__service: "{{ mawus__env }}-postgres-archive-monthly"
     pg_archive__pod: "{{ mawus_config.podman_podname }}"
     pg_archive__files_to_archive_volume: "{{ postgres_backup_volume.volume.Name }}"
     pg_archive__credentials_volume: "{{ gdrive_creds_volume.volume.Name }}"
