--- a/inventories/group_vars/mawus_prod.yml
+++ b/inventories/group_vars/mawus_prod.yml
@@ -17,11 +17,9 @@ mawus__username: svc_www_maw
 mawus__password: "{{ vault_os_svc_www_maw }}"
 mawus__env: prod
 mawus__aspnet_env: production
-
+mawus__bash_profile: # not needed for prod
 
 mawus_config_prod:
-  bash_profile: "{{ controller_home_dir }}/.bash_profile"
-
   fqdn_naked: mikeandwan.us
   fqdn_api: api.mikeandwan.us
   fqdn_auth: auth.mikeandwan.us
