--- a/roles/mikeandwan_us/tasks/maw_env_files.yml
+++ b/roles/mikeandwan_us/tasks/maw_env_files.yml
@@ -28,7 +28,7 @@
 
 - name: Add env files to .bash_profile for dev
   ansible.builtin.blockinfile:
-    path: "{{ mawus_config.bash_profile }}"
+    path: "{{ mawus__bash_profile }}"
     block: |
       function load_dotenv(){
         # https://stackoverflow.com/a/66118031/134904
