--- a/inventories/group_vars/mawus_prod.yml
+++ b/inventories/group_vars/mawus_prod.yml
@@ -19,14 +19,15 @@ mawus__env: prod
 mawus__aspnet_env: production
 mawus__bash_profile: # not needed for prod
 
-mawus_config_prod:
-  fqdn_naked: mikeandwan.us
-  fqdn_api: api.mikeandwan.us
-  fqdn_auth: auth.mikeandwan.us
-  fqdn_files: files.mikeandwan.us
-  fqdn_photos: photos.mikeandwan.us
-  fqdn_www: www.mikeandwan.us
+mawus__fqdn_naked: mikeandwan.us
+mawus__fqdn_api: api.mikeandwan.us
+mawus__fqdn_auth: auth.mikeandwan.us
+mawus__fqdn_files: files.mikeandwan.us
+mawus__fqdn_photos: photos.mikeandwan.us
+mawus__fqdn_www: www.mikeandwan.us
 
+
+mawus_config_prod:
   pfx_api: /certs/api/api.pfx
   pfx_auth: /certs/auth/auth.pfx
   pfx_signing: /certs/signing/signing.pfx
