--- a/inventories/group_vars/mawus_dev.yml
+++ b/inventories/group_vars/mawus_dev.yml
@@ -25,13 +25,13 @@ mawus__fqdn_files: dev.files.mikeandwan.us
 mawus__fqdn_photos: dev.photos.mikeandwan.us
 mawus__fqdn_www: dev.www.mikeandwan.us
 
+mawus__pfx_api: "{{ remote_mawus_root }}/certs/api/api.pfx"
+mawus__pfx_auth: "{{ remote_mawus_root }}/certs/auth/auth.pfx"
+mawus__pfx_signing: "{{ remote_mawus_root }}/certs/signing/signing.pfx"
+mawus__pfx_www: "{{ remote_mawus_root }}/certs/www/www.pfx"
+
 
 mawus_config_dev:
-  pfx_api: "{{ remote_mawus_root }}/certs/api/api.pfx"
-  pfx_auth: "{{ remote_mawus_root }}/certs/auth/auth.pfx"
-  pfx_signing: "{{ remote_mawus_root }}/certs/signing/signing.pfx"
-  pfx_www: "{{ remote_mawus_root }}/certs/www/www.pfx"
-
   gdrive_creds_dir: ""  # not needed for dev
   google_email_creds_dir: "{{ controller_mawus_env_root }}/google-creds"
   google_email_creds_file: "{{ controller_mawus_env_root }}/google-creds/www_emailer.json"
