--- a/inventories/group_vars/mawus_prod.yml
+++ b/inventories/group_vars/mawus_prod.yml
@@ -26,13 +26,13 @@ mawus__fqdn_files: files.mikeandwan.us
 mawus__fqdn_photos: photos.mikeandwan.us
 mawus__fqdn_www: www.mikeandwan.us
 
+mawus__pfx_api: /certs/api/api.pfx
+mawus__pfx_auth: /certs/auth/auth.pfx
+mawus__pfx_signing: /certs/signing/signing.pfx
+mawus__pfx_www: /certs/www/www.pfx
+
 
 mawus_config_prod:
-  pfx_api: /certs/api/api.pfx
-  pfx_auth: /certs/auth/auth.pfx
-  pfx_signing: /certs/signing/signing.pfx
-  pfx_www: /certs/www/www.pfx
-
   gdrive_creds_dir: "{{ controller_mawus_env_root }}/gdrive-creds"
   google_email_creds_dir: "{{ controller_mawus_env_root }}/google-creds"
   google_email_creds_file: /google-creds/www_emailer.json
