update google creds vars

--- a/inventories/group_vars/mawus_dev.yml
+++ b/inventories/group_vars/mawus_dev.yml
@@ -30,12 +30,12 @@ mawus__pfx_auth: "{{ remote_mawus_root }}/certs/auth/auth.pfx"
 mawus__pfx_signing: "{{ remote_mawus_root }}/certs/signing/signing.pfx"
 mawus__pfx_www: "{{ remote_mawus_root }}/certs/www/www.pfx"
 
+mawus__gdrive_creds_dir:  # not needed for dev
+mawus__google_email_creds_dir: "{{ controller_mawus_env_root }}/google-creds"
+mawus__google_email_creds_file: "{{ controller_mawus_env_root }}/google-creds/www_emailer.json"
+
 
 mawus_config_dev:
-  gdrive_creds_dir: ""  # not needed for dev
-  google_email_creds_dir: "{{ controller_mawus_env_root }}/google-creds"
-  google_email_creds_file: "{{ controller_mawus_env_root }}/google-creds/www_emailer.json"
-
   allow_low_ports: false
 
   certs_dir: "{{ remote_mawus_root }}/certs"
