--- a/inventories/group_vars/mawus_prod.yml
+++ b/inventories/group_vars/mawus_prod.yml
@@ -31,12 +31,12 @@ mawus__pfx_auth: /certs/auth/auth.pfx
 mawus__pfx_signing: /certs/signing/signing.pfx
 mawus__pfx_www: /certs/www/www.pfx
 
+mawus__gdrive_creds_dir: "{{ controller_mawus_env_root }}/gdrive-creds"
+mawus__google_email_creds_dir: "{{ controller_mawus_env_root }}/google-creds"
+mawus__google_email_creds_file: /google-creds/www_emailer.json
+
 
 mawus_config_prod:
-  gdrive_creds_dir: "{{ controller_mawus_env_root }}/gdrive-creds"
-  google_email_creds_dir: "{{ controller_mawus_env_root }}/google-creds"
-  google_email_creds_file: /google-creds/www_emailer.json
-
   allow_low_ports: true
 
   certs_dir: ""
