--- a/roles/mikeandwan_us/tasks/maw_env_files.yml
+++ b/roles/mikeandwan_us/tasks/maw_env_files.yml
@@ -7,10 +7,10 @@
 
 - name: Make sure dataprotection dir exists for local site as it doesn't use managed volume
   ansible.builtin.file:
-    path: "{{ mawus_config.dataprotection_dir }}"
+    path: "{{ mawus__dataprotection_dir }}"
     state: directory
     mode: u+rwx
-  when: mawus_config.dataprotection_dir | length > 0
+  when: mawus__dataprotection_dir | length > 0
 
 - name: Prepare environment files
   ansible.builtin.template:
