--- a/inventories/group_vars/mawus_test.yml
+++ b/inventories/group_vars/mawus_test.yml
@@ -32,17 +32,16 @@ mawus__gdrive_creds_dir:  # not needed for test
 mawus__google_email_creds_dir: "{{ controller_mawus_env_root }}/google-creds"
 mawus__google_email_creds_file: /google-creds/www_emailer.json
 
+# certs written to dir to simplify adding ca cert to host
+mawus__certs_dir: "{{ remote_mawus_root }}/certs"
+mawus__dataprotection_dir: ""
+mawus__upload_dir: ""
+mawus__systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
+mawus__asset_dir_images: "{{ asset_dir_root }}/images"
+mawus__asset_dir_movies: "{{ asset_dir_root }}/movies"
+
 
 mawus_config_test:
-  # certs written to dir to simplify adding ca cert to host
-  certs_dir: "{{ remote_mawus_root }}/certs"
-  dataprotection_dir: ""
-  upload_dir: ""
-
-  systemd_dir: "{{ remote_home_dir }}/.config/systemd/user"
-  asset_dir_images: "{{ asset_dir_root }}/images"
-  asset_dir_movies: "{{ asset_dir_root }}/movies"
-
   pg_backup_host_dir: "{{ controller_mawus_root }}/db_backups"
   pg_backup_roles: roles.sql
   pg_backup_idsrv: idsrv.20220307.dump
